WAR support added
WAR package can now be generated from project.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,3 +56,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+Play2WarKeys.disableWarningWhenWebxmlFileFound=true
+servlet30.asynctimeout=10000
