--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,3 +58,5 @@ logger.application=DEBUG
 
 Play2WarKeys.disableWarningWhenWebxmlFileFound=true
 servlet30.asynctimeout=10000
+
+SBT_OPTS="-Dscalac.patmat.analysisBudget=off"
